--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 
+
 [dependencies]
 tonic = "0.12.3"
 prost = "0.13.3"
@@ -13,6 +14,8 @@ serde = { version = "1.0.213", features = ["derive"] }
 serde_json = "1.0.132"
 async-stream = "0.3.6"
 tokio-stream = "0.1.16"
+dashmap = "6.1.0"
+
 
 [build-dependencies]
 tonic-build = "0.12.3"
