--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ path = "src/main.rs"
 name = "client"
 path = "src/client.rs"
 
+[[bin]]
+name = "fchannels"
+path = "src/fchannels.rs"
+
 [dependencies]
 tonic = "0.12.3"
 prost = "0.13.3"
@@ -21,6 +25,9 @@ serde_json = "1.0.132"
 async-stream = "0.3.6"
 tokio-stream = "0.1.16"
 dashmap = "6.1.0"
+flume = "0.11.1"
+futures = "0.3"
+
 
 [build-dependencies]
 tonic-build = "0.12.3"
